[project]
name = "Caspar"
version = "0.1.0"
description = ""
authors = [
    {name = "nullqwertyuiop", email = "null@member.fsf.org"},
]
dependencies = [
    "pydantic>=2.6.4",
    "requests>=2.31.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.1",
]
[tool.pdm]
distribution = false
